# MindSQL

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements_demo.txt
mindsql/_helper/: helper.py
mindsql/_utils/: constants.py  prompts.py
mindsql/core/: mindsql_core.py
mindsql/databases/: __init__.py  mariadb.py
mindsql/llms/: googlegenai.py
mindsql/vectorstores/: __init__.py  chromadb.py  faiss_db.py  mariadb_vector.py  qdrant.py
tests/: mindsql_demo_cli.py
