[tool.poetry]
name = "mindsql"
version = "0.2.01"
description = "Text-2-SQL made easy in just a few lines of python."
authors = ["Mindinventory <info@mindinventory.com>"]
readme = "README.md"
repository = "https://github.com/Mindinventory/MindSQL"
homepage = "https://www.mindinventory.com/text-to-sql-mindsql.php"
license = "GPL-3.0-or-later"
keywords = ["Text2SQL", "data", "text to sql", "Text-to-SQL", "RAG", "LLM", "NLP"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^1.0.15"
pandas = "2.3.1"
plotly = "5.19.0"
mysql-connector-python = "^8.3.0"
google-generativeai="0.3.2"
llama-cpp-python = "0.2.47"
openai = "^1.12.0"
sqlparse = "^0.4.4"
numpy = "2.3.1"
sentence-transformers = "^2.3.1"
psycopg2-binary = "^2.9.9"
faiss-cpu = "^1.11.0.post1"
transformers = "^4.38.2"
qdrant-client = "^1.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
